--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:layout_margin="30dp"
-  android:gravity="center_horizontal"
-  android:orientation="vertical"
-  tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="30dp"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
-  <TextView
-    android:id="@+id/tv_language1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/bahasa"
-    android:textSize="16sp" />
+    <TextView
+        android:id="@+id/tv_language1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bahasa"
+        android:textSize="16sp" />
 
-  <TextView
-    android:id="@+id/tv_language2"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:text="@string/bahasa"
-    android:textSize="16sp" />
+    <TextView
+        android:id="@+id/tv_language2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/bahasa"
+        android:textSize="16sp" />
+
+
+    <Button
+        android:id="@+id/btn_en"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="en" />
+
+  <Button
+        android:id="@+id/btn_th"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="th" />
+  <Button
+        android:id="@+id/btn_ml"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ml" />
+
 
 </LinearLayout>
